軽微な不具合を修正してコミットします

--- a/scss/module/_notification.scss
+++ b/scss/module/_notification.scss
@@ -31,7 +31,7 @@
         border-radius: 30px;
         
     }
-    //レイアウトここまで
+    //------------------------レイアウトここまで
     
     //要素のスタイリング
     &__head-text {
