--- a/scss/module/_user.scss
+++ b/scss/module/_user.scss
@@ -15,7 +15,7 @@
         left: 8%;
         font-size: 10rem;
     }
-    
+    //フォロー数、お気に入りなどの情報
     .user-info {
         width: 50%;
         margin: 0 auto;
@@ -26,11 +26,13 @@
             font-size: 1.6rem;
             line-height: 1.8;
             margin-right: 10px;
-
+            
+            //項目名
             &__main {
                 font-weight: bold;
             }
 
+            //項目値
             &__sub {
                 font-size: 1.0rem;
                 line-height: 1.0;
@@ -38,6 +40,7 @@
         }
     }
     
+    //プロフィール編集ボタン
     .user-button {
         margin: auto 10px auto auto;
         padding-bottom: 3px;
@@ -60,6 +63,8 @@
         text-align: left;
         font-size: 1.2rem;
         line-height: 1.8;
+        
+        //ユーザ名は太字で強調
         & li:first-child {
             font-size: 1.5rem;
             font-weight: bold;
