--- a/scss/module/_follow.scss
+++ b/scss/module/_follow.scss
@@ -1,3 +1,7 @@
+/*------------------------------*/
+/*FOLLOW                        */
+/*------------------------------*/
+
 .follow {
     width: 70%;
     @include flex-table;
@@ -16,7 +20,7 @@
             font-weight: bold;
         }
         
-        &__main {
+        &__content {
             @include flex-left;
             padding-left: 0;
             
