--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@ $BASE_COLOR: #b2f0ff;
 @import "simple_module/field";
 @import "simple_module/link";
 @import "simple_module/icon";
+@import "simple_module/mention";
 
 //画面用モジュール
 @import "module/header";
