--- a/scss/simple_module/_icon.scss
+++ b/scss/simple_module/_icon.scss
@@ -5,7 +5,23 @@
     } 
 }
 
+.icon--small {
+    @extend %icon;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+}
+
 .icon--middle {
     @extend %icon;
-    font-size: 5rem;
+    width: 50px;
+    height: 50px;
+    border-radiusu: 5%;
+}
+
+.icon--large {
+    @extend %icon;
+    width: 120px;
+    height: 120px;
+    border-radius: 10%;
 }
