サインアップ画面レスポンシブ対応

--- a/css/style.css
+++ b/css/style.css
@@ -3,32 +3,33 @@
 /*------------------------------*/
 html {
   font-size: 75%;
-}
+  width: 100%;
+  height: 100%; }
 
 body {
   font-family: 'Noto Sans Japanese', 'sans-serif';
   color: #767676;
-  background-color: #e5e5e5;
-}
+  width: 100%;
+  height: 100%;
+  background-color: #e5e5e5; }
 
 a {
   color: #767676;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 ul {
-  list-style: none;
-}
+  list-style: none; }
 
 button, input[type=submit] {
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
-}
+  appearance: none; }
 
 .wrapper {
-  display: flex;
-}
+  display: flex; }
+
+.objDisabled {
+  background-color: #ccc !important; }
 
 /*-----------------------------*/
 /*LAYOUT                       */
@@ -38,8 +39,7 @@ button, input[type=submit] {
   margin: 20px auto;
   background-color: #fff;
   text-align: center;
-  padding-top: 20px;
-}
+  padding-top: 20px; }
 
 .notification {
   width: 80%;
@@ -48,8 +48,7 @@ button, input[type=submit] {
   text-align: center;
   padding-top: 20px;
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .search {
   width: 80%;
@@ -60,13 +59,7 @@ button, input[type=submit] {
   height: 50px;
   color: #fff;
   background-color: #b2f0ff;
-  padding: 0;
-}
-
-.login {
-  width: 100%;
-  height: 50%;
-}
+  padding: 0; }
 
 /*------------------------------*/
 /*BUTTON                        */
@@ -81,12 +74,9 @@ button, input[type=submit] {
   display: inline-block;
   margin-right: 20px;
   margin-top: 5px;
-  cursor: pointer;
-}
-
-.button--save:hover, .button--nav:hover, .button--exit:hover, .button--edit:hover, .button--follow:hover {
-  opacity: 0.8;
-}
+  cursor: pointer; }
+  .button--save:hover, .button--nav:hover, .button--exit:hover, .button--edit:hover, .button--follow:hover {
+    opacity: 0.8; }
 
 .button--save {
   display: block;
@@ -94,35 +84,32 @@ button, input[type=submit] {
   height: 50px;
   margin: 30px auto;
   font-size: 1.5rem;
-  background-color: #b2f0ff;
-}
+  background-color: #b2f0ff; }
 
 .button--nav {
-  width: 100px;
-  height: 30px;
-  background-color: #b2f0ff;
-}
+  width: 80%;
+  height: 70%;
+  font-size: 140%;
+  line-height: 1.8;
+  background-color: #b2f0ff; }
 
 .button--exit {
   width: 100px;
   height: 30px;
-  background-color: #ffe1b2;
-}
+  background-color: #ffe1b2; }
 
 .button--edit {
   width: 200px;
   height: 30px;
   line-height: 1.9;
-  background-color: #ffe1b2;
-}
+  background-color: #ffe1b2; }
 
 .button--follow {
   width: 80px;
   height: 24px;
   font-size: 1.0rem;
   line-height: 1.8;
-  background-color: #b2f0ff;
-}
+  background-color: #b2f0ff; }
 
 /*------------------------------*/
 /*FIELD                         */
@@ -131,96 +118,96 @@ button, input[type=submit] {
   display: block;
   width: 250px;
   height: 40px;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 .field--user_id {
-  margin: 50px auto;
-}
+  margin: 50px auto; }
 
 .field--password {
-  margin: 15px auto;
-}
+  margin: 15px auto; }
 
 .field--post {
   width: 600px;
-  height: 200px;
-}
+  height: 200px; }
 
 /*------------------------------*/
 /*LINK                          */
 /*------------------------------*/
 .link--header, .link--content {
   font-size: 1.8rem;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .link--content {
   font-size: 4.5rem;
   margin-right: 10px;
-  vertical-align: top;
-}
+  vertical-align: top; }
 
 .icon--small:hover, .icon--middle:hover, .icon--large:hover {
-  opacity: 0.8;
-}
+  opacity: 0.8; }
 
 .icon--small {
   width: 25px;
   height: 25px;
-  border-radius: 50%;
-}
+  border-radius: 50%; }
 
 .icon--middle {
   width: 50px;
   height: 50px;
-  border-radiusu: 5%;
-}
+  border-radiusu: 5%; }
 
 .icon--large {
   width: 120px;
   height: 120px;
-  border-radius: 10%;
-}
+  border-radius: 10%; }
 
 .share__color {
-  color: aquamarine;
-}
+  color: aquamarine; }
 
 .favorite__color {
-  color: blanchedalmond;
-}
+  color: blanchedalmond; }
 
 /*------------------------------*/
 /*HEADER                        */
 /*------------------------------*/
+.header__sub {
+  width: 20%; }
+
+.header {
+  height: 6%; }
+
 .header {
   width: 100%;
-  height: 40px;
   background-color: #fff;
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
+  .header__title {
+    margin-right: auto; }
+  .header__nav {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+    line-height: 1.0; }
+  .header__sub {
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    line-height: 2.0; }
 
-.header__title {
-  margin-right: auto;
-}
-
-.header__nav {
-  width: 40%;
-  display: flex;
-  justify-content: space-between;
-  line-height: 1.0;
-}
-
-.header__sub {
-  width: 16%;
-  display: flex;
-  justify-content: space-between;
-  margin-left: auto;
-  line-height: 2.0;
-}
-
+@media screen and (max-width: 1080px) {
+  .header__sub {
+    width: 24%; } }
+@media screen and (max-width: 900px) {
+  .header__sub {
+    width: 32%; } }
+@media screen and (max-width: 670px) {
+  .header__sub {
+    width: 45%; } }
+@media screen and (max-height: 640px) {
+  .header {
+    height: 8%; } }
+@media screen and (max-height: 360px) {
+  .header {
+    height: 10%; } }
 /*-----------------------------*/
 /*POST                         */
 /*-----------------------------*/
@@ -228,66 +215,75 @@ button, input[type=submit] {
   width: 50%;
   margin: 15px auto;
   border-bottom: 1px solid #d3d3d3;
-  background-color: #fff;
-}
+  background-color: #fff; }
 
 .post-user {
   display: flex;
   justify-content: flex-start;
-  height: 30px;
-}
-
-.post-user__content {
-  font-size: 1.6rem;
-  line-height: 1.8;
-  margin-right: 10px;
-}
+  height: 30px; }
+  .post-user__content {
+    font-size: 1.6rem;
+    line-height: 1.8;
+    margin-right: 10px; }
 
 .post-text {
   margin-top: 25px;
   margin-left: 100px;
-  text-align: left;
-}
+  text-align: left; }
 
 .post-mention {
   display: flex;
   justify-content: space-between;
-  width: 30%;
-}
-
-.post-mention__content {
-  font-size: 1.8rem;
-}
+  width: 30%; }
+  .post-mention__content {
+    font-size: 1.8rem; }
 
 /*------------------------------*/
 /*LOGIN                         */
 /*------------------------------*/
+.login {
+  width: 30%; }
+
+.login {
+  height: 50%; }
+
+.login {
+  margin: 10% auto; }
+
 .login-form {
   display: block;
-  width: 30%;
   background-color: #fff;
-  height: 40%;
-  padding-top: 50px;
-  margin: 150px auto;
-  border-radius: 40px;
-}
+  padding-top: 5%;
+  border-radius: 8%; }
 
 .login__text {
   text-align: center;
-  font-size: 1.7rem;
-}
+  font-size: 1.7rem; }
 
+@media screen and (max-width: 1080px) {
+  .login {
+    width: 45%; } }
+@media screen and (max-width: 950px) {
+  .login {
+    width: 50%; } }
+@media screen and (max-width: 670px) {
+  .login {
+    width: 60%; } }
+@media screen and (max-height: 640px) {
+  .login {
+    height: 60%; } }
+@media screen and (max-height: 360px) {
+  .login {
+    height: 70%; } }
 /*-----------------------------*/
 /*HOME                         */
 /*-----------------------------*/
 .home__post-form {
-  background-color: #e3f8fd;
-}
+  background-color: #e3f8fd; }
 
 .post-form__main {
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 /*-----------------------------*/
 /*USER                         */
@@ -297,42 +293,29 @@ button, input[type=submit] {
   display: flex;
   justify-content: center;
   background-color: #fff;
-  border-top: 1px solid #d3d3d3;
-}
-
-.user__headline .user-icon {
-  position: absolute;
-  left: 8%;
-  font-size: 10rem;
-}
-
-.user__headline .user-info {
-  width: 50%;
-  margin: 0 auto;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-}
-
-.user__headline .user-info__content {
-  font-size: 1.6rem;
-  line-height: 1.8;
-  margin-right: 10px;
-}
-
-.user__headline .user-info__content__main {
-  font-weight: bold;
-}
-
-.user__headline .user-info__content__sub {
-  font-size: 1.0rem;
-  line-height: 1.0;
-}
-
-.user__headline .user-button {
-  margin: auto 10px auto auto;
-  padding-bottom: 3px;
-}
+  border-top: 1px solid #d3d3d3; }
+  .user__headline .user-icon {
+    position: absolute;
+    left: 8%;
+    font-size: 10rem; }
+  .user__headline .user-info {
+    width: 50%;
+    margin: 0 auto;
+    background-color: #fff;
+    display: flex;
+    justify-content: center; }
+    .user__headline .user-info__content {
+      font-size: 1.6rem;
+      line-height: 1.8;
+      margin-right: 10px; }
+      .user__headline .user-info__content__main {
+        font-weight: bold; }
+      .user__headline .user-info__content__sub {
+        font-size: 1.0rem;
+        line-height: 1.0; }
+  .user__headline .user-button {
+    margin: auto 10px auto auto;
+    padding-bottom: 3px; }
 
 .user__about {
   float: left;
@@ -340,26 +323,19 @@ button, input[type=submit] {
   height: 300px;
   background-color: #fff;
   margin-top: 80px;
-  margin-left: 2%;
-}
-
-.user__about__text {
-  text-align: left;
-  font-size: 1.2rem;
-  line-height: 1.8;
-}
-
-.user__about__text li:first-child {
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1.5;
-}
-
-.user__about::after {
-  content: '';
-  display: block;
-  clear: both;
-}
+  margin-left: 2%; }
+  .user__about__text {
+    text-align: left;
+    font-size: 1.2rem;
+    line-height: 1.8; }
+    .user__about__text li:first-child {
+      font-size: 1.5rem;
+      font-weight: bold;
+      line-height: 1.5; }
+  .user__about::after {
+    content: '';
+    display: block;
+    clear: both; }
 
 .user__head-text {
   width: 50%;
@@ -369,8 +345,7 @@ button, input[type=submit] {
   text-align: center;
   font-weight: bold;
   font-size: 1.5rem;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
 /*------------------------------*/
 /*FOLLOW                        */
@@ -380,82 +355,57 @@ button, input[type=submit] {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  line-height: 1.6;
-}
-
-.follow__user {
-  width: 25%;
-  height: 200px;
-  background-color: white;
-  margin-left: 20px;
-  padding-left: 10px;
-}
-
-.follow__user > :nth-child(2) {
-  font-weight: bold;
-}
-
-.follow__user__content {
-  display: flex;
-  justify-content: flex-start;
-  padding-left: 0;
-}
-
-.follow__user__content > :last-child {
-  margin: auto 10px auto auto;
-}
+  line-height: 1.6; }
+  .follow__user {
+    width: 25%;
+    height: 200px;
+    background-color: white;
+    margin-left: 20px;
+    padding-left: 10px; }
+    .follow__user > :nth-child(2) {
+      font-weight: bold; }
+    .follow__user__content {
+      display: flex;
+      justify-content: flex-start;
+      padding-left: 0; }
+      .follow__user__content > :last-child {
+        margin: auto 10px auto auto; }
 
 /*-----------------------------*/
 /*NOTIFICATION                 */
 /*-----------------------------*/
 .notification__list {
-  width: 40%;
-}
-
-.notification__list__favorite {
-  width: 40%;
-  margin-left: 20px;
-  border-left: 10px dotted #e3e3e3;
-}
-
+  width: 40%; }
+  .notification__list__favorite {
+    width: 40%;
+    margin-left: 20px;
+    border-left: 10px dotted #e3e3e3; }
 .notification__subject {
   display: flex;
   justify-content: flex-start;
-  font-size: 1.6rem;
-}
-
-.notification__subject > :last-child {
-  margin-left: 10px;
-}
-
+  font-size: 1.6rem; }
+  .notification__subject > :last-child {
+    margin-left: 10px; }
 .notification__object {
   display: flex;
   justify-content: flex-start;
   border: 1px solid #e6e6e6;
-  border-radius: 30px;
-}
-
+  border-radius: 30px; }
 .notification__head-text {
   font-weight: bold;
   font-size: 1.4rem;
   border-bottom: 2px solid #b2f0ff;
-  padding-bottom: 3px;
-}
-
+  padding-bottom: 3px; }
 .notification__post {
-  line-height: 1.5;
-}
-
-.notification__post > :first-child {
-  font-weight: bold;
-}
-
-.notification__post__text {
-  text-align: center;
-}
+  line-height: 1.5; }
+  .notification__post > :first-child {
+    font-weight: bold; }
+  .notification__post__text {
+    text-align: center; }
 
 .search {
   font-size: 1.7rem;
   line-height: 2.3;
-  font-weight: bold;
-}
+  font-weight: bold; }
+
+/*# sourceMappingURL=style.css.map */
