--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,11 +4,15 @@
 
 html {
     font-size: 75%;
+	width: 100%;
+  	height: 100%;
 }
 
 body {
     font-family: 'Noto Sans Japanese', 'sans-serif';
     color: #767676;
+	width: 100%;
+  	height: 100%;
     background-color: #e5e5e5;
 }
 
@@ -29,5 +33,9 @@ button,input[type=submit]{
 
 .wrapper {
     display: flex;
+}
+
+.objDisabled {
+	background-color: #ccc !important;
 }
 
