--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,30 +1,34 @@
 /*-----------------------------*/
-/*LAYOUT                       */
+/*LAYOUT					   */
 /*-----------------------------*/
 
 //各画面で汎用的に利用されるレイアウト
 @mixin basic {
-    width: 80%;
-    
-    margin: 20px auto;
-    background-color: #fff;
-    text-align: center;
-    padding-top: 20px;
+	width: 80%;
+	
+	margin: 20px auto;
+	background-color: #fff;
+	text-align: center;
+	padding-top: 20px;
 }
 
 .home {
-    @include basic;
+	@include basic;
+}
+
+.user {
+	@include basic;
 }
 
 .notification {
-    @include basic;
-    @include flex-center;
+	@include basic;
+	@include flex-center;
 }
 
 .search {
-    @include basic;
-    height: 50px;
-    color: #fff;
-    background-color: $BASE_COLOR;
-    padding: 0;
+	@include basic;
+	height: 50px;
+	color: #fff;
+	background-color: $BASE_COLOR;
+	padding: 0;
 }
