--- a/scss/simple_module/_button.scss
+++ b/scss/simple_module/_button.scss
@@ -1,68 +1,91 @@
 /*------------------------------*/
-/*BUTTON                        */
+/*BUTTON						*/
 /*------------------------------*/
 %button {
-    //文字のスタイル
-    text-decoration: none;
-    text-align: center;
-    font-size: 1.3rem;
-    line-height: 1.5;
-    color: #fff;
-    
-    //ボタンの枠のスタイル
-    border-radius: 5px;
-    
-    //ボタンの配置のスタイル
-    display: inline-block;
-    margin-right: 20px;
-    margin-top: 5px;
-    cursor: pointer;
-    
-    //擬似要素
-    &:hover {
-        opacity: 0.8;
-    }
+	//文字のスタイル
+	text-decoration: none;
+	text-align: center;
+	font-size: 1.3rem;
+	line-height: 1.5;
+	color: #fff;
+	
+	//ボタンの枠のスタイル
+	border-radius: 5px;
+	
+	//ボタンの配置のスタイル
+	display: inline-block;
+	cursor: pointer;
+	
+	//擬似要素
+	&:hover {
+		opacity: 0.8;
+	}
 }
 
 .button--save {
-    @extend %button;
-    display: block;
-    width: 250px;
-    height: 50px;
-    margin: 30px auto;
-    font-size: 1.5rem;
-    background-color: $BASE_COLOR;
+	@extend %button;
+	display: block;
+	width: 40%;
+	padding-bottom: 5px;
+	height: 40px;
+	margin: 10px auto;
+	font-size: 1.5rem;
+	background-color: $BASE_COLOR;
+}
+
+.button--post {
+	@extend %button;
+	display: block;
+	width: 30%;
+	height: 40px;
+	margin-left: auto;
+	font-size: 1.5rem;
+	background-color: $BASE_COLOR;
 }
 
 .button--nav {
-    @extend %button;
-    width: 80%;
-    height: 70%;
+	@extend %button;
+	width: 65%;
+	height: 70%;
 	font-size: 140%;
 	line-height: 1.8;
-    background-color: $BASE_COLOR;
+	margin-right: 10px;
+	margin-top: 10px;
+	background-color: $BASE_COLOR;
 }
 
 .button--exit {
-    @extend %button;
-    width: 100px;
-    height: 30px;
-    background-color: #ffe1b2;
+	@extend %button;
+	width: 100px;
+	height: 30px;
+	margin-top: 10px;
+	margin-right: 5px;
+	background-color: #ffe1b2;
 }
 
 .button--edit {
-    @extend %button;
-    width: 200px;
-    height: 30px;
-    line-height: 1.9;
-    background-color: #ffe1b2;
+	@extend %button;
+	width: 200px;
+	height: 40px;
+	line-height: 1.9;
+	font-size: 1.5rem;
+	background-color: $BASE_COLOR;
 }
 
 .button--follow {
-    @extend %button;
-    width: 80px;
-    height: 24px;
-    font-size: 1.0rem;
-    line-height: 1.8;
-    background-color: $BASE_COLOR;
+	@extend %button;
+	width: 80px;
+	height: 24px;
+	font-size: 1.0rem;
+	line-height: 1.8;
+	background-color: $BASE_COLOR;
+}
+
+.button--follow--large {
+	@extend %button;
+	width: 200px;
+	height: 40px;
+	font-size: 1.5rem;
+	line-height: 1.9;
+	background-color: $BASE_COLOR;
 }
